# nlp2cmd

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  =5.9.0  CHANGELOG.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  ENHANCED_README.md  INSTALLATION.md  LICENSE  Makefile  PROJECT_HISTORY.md  PROJECT_STRUCTURE.md  QUICK_FIX_REFERENCE.md  README.md  README_GENERATION.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  SCHEMA_CONSOLIDATION_SUMMARY.md  TEST_SCRIPTS_README.md  THERMODYNAMIC_ARCHITECTURE.md  THERMODYNAMIC_INTEGRATION.md  TODO.md  all_schemas.json  analyze_version_detection.py  batch_1_test.json  batch_3_final.json  batch_3_test.json  benchmark_report.json  benchmark_report.md  benchmark_results.csv  ci_test_results.json  cmd2schema.py  compare_batches.py  comprehensive_test_results.json  config.yaml  (+79 more)
artifacts/: generated_commands.txt
benchmarks/: thermodynamic_benchmark.py
command_schemas/: docker.appspec.json  docker.json  index.json
command_schemas/browser/: click.json  navigate.json  open_url.json  search.json  type_text.json
command_schemas/commands/: black.json  cat.json  chmod.json  cp.json  df.json  docker.json  eslint.json  find.json  free.json  git.json  gpg.json  grep.json  iconv.json  iptables.json  jq.json  kubectl.json  ls.json  lsof.json  make.json  mongodump.json  mv.json  mysql.json  mysqldump.json  netstat.json  nmap.json  node.json  npm.json  nslookup.json  openssl.json  pip.json  ps.json  psql.json  pytest.json  python3.json  rm.json  rsync.json  sed.json  sensors.json  sort.json  split.json  (+5 more)
command_schemas/exports/: validated_schemas.json
command_schemas/keyboard/: linux_shortcuts.json  macos_shortcuts.json  windows_shortcuts.json
command_schemas/sites/: example.com.json  github.com.json  google.com_learned.json  httpbin.org.json  www.amazon.com.json  www.google.com.json
data/: cmd.csv  command_detector.json  expanded_phrases.json  form_data.json  form_schema.json  keyword_intent_detector_config.json  ml_intent_model.pkl  optimization_schema.json  patterns.json  router_config.json  semantic_embeddings_optimized.pkl  templates.json
demos/: demo_enhanced.py  demo_intelligent_nlp2cmd.py  demo_version_detection.py  simple_schema_demo.py
docker/: init-db.sql
docs/: BENCHMARKING.md  CACHE_MANAGEMENT.md  ENHANCED_CONTEXT_OPTIMIZATION.md  ENHANCED_NLP_INTEGRATION.md  KEYWORD_DETECTION_FLOW.md  LEMMA_INSTALLATION.md  LLM_SCHEMA_GENERATION.md  PRODUCTION_READY.md  README.md  SCHEMA_BASED_GENERATION.md  SCHEMA_COMPLETE_GUIDE.md  SCHEMA_SYSTEMS.md  SCHEMA_USAGE_GUIDE.md  SERVICE_FIX_SUMMARY.md  SERVICE_MODE.md  TEST_FIXES_SUMMARY.md  THERMODYNAMIC_USE_CASES.md  VERSIONED_SCHEMAS.md  VIRTUAL_OBJECTS_GUIDE.md  WEB_SCHEMA_GUIDE.md  cli-reference.md  examples-guide.md  implementation_tasks.md  python-api.md  quick-fix-reference.md  refactoring_plan.md  shell_bug_analysis.md
docs/api/: README.md
docs/guides/: user-guide.md
docs/maintainers/: DOCUMENTATION_UPDATE.md  IMPROVEMENTS.md  README.md  SCHEMA_CONSOLIDATION_SUMMARY.md  TEST_SCRIPTS_README.md
examples/: MAKEFILE_PROSTY.md  Makefile  README.md  _example_helpers.py  app2schema_to_nlp2cmd_dynamic.py  benchmark_nlp2cmd.py  dynamic_sources_shell_script_and_makefile.py  migration_guide.py  schema_driven_manual_appspec.py  schema_driven_mvp.py  toon_simple_demo.py
examples/01_basics/: README.md
examples/02_benchmarks/: README.md
examples/03_integrations/: README.md
examples/04_domain_specific/: README.md  SUMMARY.md  _demo_helpers.py  run_all.py
examples/05_advanced_features/: README.md
examples/06_tools_and_utilities/: README.md
examples/architecture/: end_to_end_demo.py
examples/devops/: README.md  README_WEB_BACKEND.md  demo.py  demo_auto.py  demo_batch.py  nlp2cmd_web_controller.py  prompt.txt  simple_web_test.py
examples/docker/: basic_docker.py  file_repair.py
examples/kubernetes/: basic_kubernetes.py
examples/shell/: basic_shell.py  (+4 more)
generated_schemas/: nginx.json
migrated_schemas/: active_versions.json  index.json
scripts/: bump_version.py  setup_external.py  test_commands_docker.sh
termo2/: __init__.py  base_solver.py  hyperparameter_optimization.py  vehicle_routing.py
tests/: __init__.py  conftest.py  test_form_detection.py
(+552 files in other folders)
